--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <div class="image-item">
         <img src="image/js.png" alt="js Image">
     </div>
+    <div class="image-item">
+        <img src="image/react.png" alt="reactjs Image">
+    </div>      
       </section>
     </main>
 
@@ -106,7 +109,7 @@
 
       function downloadResume() {
         var resumeUrl =
-          "https://drive.google.com/file/d/1nFY48-JH13twS6e7-yMkOMG4l5e2Q_5e/view?usp=sharing";
+          "https://drive.google.com/file/d/15K_7HNCPZr5YDf9PmX70mzAaav2qaqIe/view?usp=sharing";
         window.open(resumeUrl, "_blank");
       }
     </script>
